--- a/components/ThemeToggle/ThemeToggle.module.scss
+++ b/components/ThemeToggle/ThemeToggle.module.scss
@@ -1,4 +1,4 @@
-
+@import "../../styles/mixins";
 .toggle {
     --size: 1.5rem;   
     width: var(--size);
@@ -9,7 +9,11 @@
 }
 .dark {
     box-shadow: inset calc(var(--size) * 0.33) calc(var(--size) * -0.25) 0;
-    color: hsl(240, 100%, 95%);    
+    color: var(--color-yellow); 
+    
+    @include bp(medium){
+        color: hsl(240, 100%, 95%); 
+    }
 }
 .light {
     --ray-size: calc(var(--size) * -0.4);
@@ -17,7 +21,7 @@
     --offset-diagonal: calc(var(--size) * 0.45);
 
     transform: scale(0.75);
-    color: #fff;
+    color: var(--color-yellow);
     box-shadow: 
       inset 0 0 0 var(--size),
       calc(var(--offset-orthogonal) * -1) 0 0 var(--ray-size),
@@ -29,4 +33,8 @@
       calc(var(--offset-diagonal) * -1) var(--offset-diagonal) 0 var(--ray-size),
       var(--offset-diagonal) calc(var(--offset-diagonal) * -1) 0 var(--ray-size),
     ;
+
+    @include bp(medium) {
+        color: hsl(240, 100%, 95%); 
+    }
 }
