--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
 :root {
   --color-white: #fff;
   --color-purple: #340D6A;
+  --color-yellow: #f2ce3f;
 }
 
 body,
@@ -73,6 +74,7 @@ h3 {
   line-height: 42px;
   text-transform: none;
   text-align:center;
+  color: var(--color-text-primary);
 }
 .h4 {
   margin: spacing(8, 0, 6, 0);
